--- a/IClothingApplication/Views/ShoppingCarts/ViewCart.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/ViewCart.cshtml
@@ -12,29 +12,39 @@
     <table class="table">
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Product.productName)
+                @*@Html.DisplayNameFor(model => model.Product.productName)*@
+                Product Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.productQty)
+                @*@Html.DisplayNameFor(model => model.productQty)*@
+                Product Quantity
             </th>
             <th></th>
         </tr>
 
-        @foreach (var item in Model)
+        @if (Model != null)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Product.productName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.productQty)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.productID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.productID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.productID })
-                </td>
-            </tr>
+
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Product.productName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.productQty)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "EditItem", new { id = item.productID }, new { @class = "text-dark" })
+                        @*@Html.ActionLink("Details", "ItemDetails", new { id = item.productID }) |*@
+                        @Html.ActionLink("Delete", "DeleteItem", new { id = item.productID }, new { @class = "text-dark" })
+                    </td>
+                </tr>
+            }
         }
-        </table>
+    </table>
+
+    <div class="form-actions no-color">
+        @Html.ActionLink("Checkout", "Checkout", new { }, new { @class = "btn btn-outline-success" })
+    </div>
 </div>
