--- a/IClothingApplication/Views/Home/Index.cshtml
+++ b/IClothingApplication/Views/Home/Index.cshtml
@@ -13,18 +13,18 @@
         </div>
 
     </div>
-    <div class="row">
+    <div class="row" align="center">
         <div class="col-md-4">
-            <h2>@Html.ActionLink("Shop Women's", "FilteredDepartments", "Department", new { departmentId = 1 }, null)</h2>
-            <img src="~/Images/women1.jpg" width="250" height="400" border="2px" alt="Woman Photo" />
+            <h2>@Html.ActionLink("Shop Women's", "Index", "Products", new { sortOrder = ViewBag.PriceSortParm, filter = "Women's", filterType = "Department", searchString = ViewBag.searchString, changeFilter = true, }, new { @class = "btn btn-secondary me-1" })</h2>
+            <img src="~/Images/women1.jpg" width="250" height="400" border="2px" alt="Woman Photo" style="object-fit: cover;"/>
         </div>
         <div class="col-md-4">
-            <h2>@Html.ActionLink("Shop Men's", "Index", "Departments")</h2>
-            <img src="~/Images/man.png" width="250" height="400" border="2px" alt="Man Photo" />
+            <h2>@Html.ActionLink("Shop Men's", "Index", "Products", new { sortOrder = ViewBag.PriceSortParm, filter = "Mens", filterType = "Department", searchString = ViewBag.searchString, changeFilter = true, }, new { @class = "btn btn-secondary me-1" })</h2>
+            <img src="~/Images/man.png" width="250" height="400" border="2px" alt="Man Photo" style="object-fit: cover;"/>
         </div>
         <div class="col-md-4">
-            <h2>@Html.ActionLink("Shop Kid's", "Index", "Departments")</h2>
-            <img src="~/Images/kids.jpg" width="250" height="400" border="2px" alt="Kids Photo" />
+            <h2>@Html.ActionLink("Shop Kid's", "Index", "Products", new { sortOrder = ViewBag.PriceSortParm, filter = "Kids", filterType = "Department", searchString = ViewBag.searchString, changeFilter = true, }, new { @class = "btn btn-secondary me-1" })</h2>
+            <img src="~/Images/kidsoutfit.jpg" width="250" height="400" border="2px" alt="Kids Photo" style="object-fit: cover;" />
         </div>
     </div>
 </div>
