--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -74,6 +74,53 @@
 
 <br />
 
+@{const int maxLength = 90;}
+
+<div class="container">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+        @foreach (var item in Model)
+        {
+            <div class="col mb-4">
+                <div class="card" style="min-height: 500px">
+                    <img src="~/Images/placeholder.jpg" class="card-img-top" alt="Card Image"> @*@item.productName + ".jpg"*@
+                    <div class="card-body d-grid">
+                        <h5 class="card-title">@Html.ActionLink(item.productName, "Details", new { id = item.productID }, new { @class = "text-dark" })</h5>
+                        <p class="card-text">@(item.productDescription.Length > maxLength ? item.productDescription.Substring(0, maxLength) + "..." : item.productDescription)</p>
+
+                        <div class="d-grid" style="height: min-content; align-self: end;">
+                            <div class="d-flex justify-content-between align-items-end p-1" style="height:min-content">
+                                <span class="badge rounded-pill bg-secondary">@item.Category.categoryName</span>
+                                <span class="badge rounded-pill bg-secondary">@item.Brand.brandName</span>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-end flex-row-reverse p-1" style="height:min-content">
+                                @if (item.productQty != 0)
+                                {
+                                    <span class="badge rounded-pill bg-primary">@item.productQty In Stock</span>
+                                }
+                                else
+                                {
+                                    <span class="badge rounded-pill bg-warning">Out Of Stock</span>
+                                }
+                            </div>
+                            @if (Session["UserType"] == "admin")
+                            {
+                                @Html.ActionLink("Edit", "Edit", new { id = item.productID }, new { @class = "text-dark" })
+                                @Html.ActionLink("Delete", "Delete", new { id = item.productID }, new { @class = "text-dark" })
+                            }
+                            @*@Html.ActionLink("Details", "Details", new { id = item.productID }, new { @class = "text-dark" })*@
+                            @if (Session["UserType"] != "admin")
+                            {
+                                @Html.ActionLink("Add To Cart", "Add", new { id = item.productID }, new { @class = "btn btn-primary mt-2" })
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+
+@*
 <table class="table">
     <tr>
         <th>
@@ -127,7 +174,6 @@
                     @Html.ActionLink("Edit", "Edit", new { id = item.productID }, new { @class = "text-dark" })
                     @Html.ActionLink("Delete", "Delete", new { id = item.productID }, new { @class = "text-dark" })
                 }
-                @*@Html.ActionLink("Details", "Details", new { id = item.productID }, new { @class = "text-dark" })*@
                 @if (Session["UserType"] != "admin")
                 {
                     @Html.ActionLink("Add To Cart", "Add", new { id = item.productID }, new { @class = "text-dark" })
@@ -137,3 +183,4 @@
     }
 
 </table>
+*@
