--- a/IClothingApplication/Views/Products/Details.cshtml
+++ b/IClothingApplication/Views/Products/Details.cshtml
@@ -4,63 +4,25 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.productName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.productName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.productDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.productDescription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.productPrice)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.productPrice)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.productQty)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.productQty)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Brand.brandName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Brand.brandName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.categoryName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category.categoryName)
-        </dd>
-
-    </dl>
+<div class="container mt-4">
+    @*<h2 class="text-center mb-3">Product Details</h2>*@
+    <div class="card w-50 mx-auto my-auto">
+        <img src="~/Images/placeholder.jpg" class="card-img-top" alt="Placeholder Image">
+        <div class="card-body">
+            <h4 class="card-title text-center">@Html.DisplayFor(model => model.productName)</h4>
+            <hr />
+            <p class="card-text">
+                <strong>Description:</strong> @Html.DisplayFor(model => model.productDescription)<br>
+                <strong>Price:</strong> $@Html.DisplayFor(model => model.productPrice)<br>
+                <strong>Quantity:</strong> @Html.DisplayFor(model => model.productQty)<br>
+                <strong>Brand:</strong> @Html.DisplayFor(model => model.Brand.brandName)<br>
+                <strong>Category:</strong> @Html.DisplayFor(model => model.Category.categoryName)
+            </p>
+            @if (Session["UserType"] != null && Session["UserType"].ToString() == "admin")
+            {
+                @Html.ActionLink("Edit", "Edit", new { id = Model.productID }, new { @class = "btn btn-primary" })
+            }
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-secondary" })
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.productID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
