Cart stock issue colored indicator

--- a/IClothingApplication/Views/Shared/_Layout.cshtml
+++ b/IClothingApplication/Views/Shared/_Layout.cshtml
@@ -79,6 +79,7 @@
                     }
                     else
                     {
+                        <li>@Html.ActionLink("Cart", "ViewCart", "ShoppingCarts", new { area = "" }, new { @class = "nav-link text-info" })</li>
                         <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link text-light" })</li>
                         <li>@Html.ActionLink("Register", "Register", "Home", new { area = "" }, new { @class = "nav-link text-light" })</li>
                     }
