--- a/IClothingApplication/Views/ShoppingCarts/ViewCart.cshtml
+++ b/IClothingApplication/Views/ShoppingCarts/ViewCart.cshtml
@@ -31,9 +31,22 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Product.productName)
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.productQty)
-                    </td>
+                    @if (item.productQty > item.Product.productQty)
+                    {
+                        <td class="bg-danger bg-opacity-25 position-relative" title="Product Stock Lower Than Cart Quantity" >
+                            <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                                <span class="visually-hidden">New alerts</span>
+                            </span>
+                            @Html.DisplayFor(modelItem => item.productQty)
+                        </td>
+                    }
+                    else
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.productQty)
+                        </td>
+                    }
+
                     <td>
                         @Html.ActionLink("Edit", "EditItem", new { id = item.productID }, new { @class = "text-dark" })
                         @*@Html.ActionLink("Details", "ItemDetails", new { id = item.productID }) |*@
