--- a/IClothingApplication/Views/Products/Index.cshtml
+++ b/IClothingApplication/Views/Products/Index.cshtml
@@ -107,7 +107,7 @@
         {
             <div class="col mb-4">
                 <div class="card" style="min-height: 500px">
-                    <img src="~/Images/placeholder.jpg" class="card-img-top" alt="Card Image"> @*@item.productName + ".jpg"*@
+                    <img src="~/Images/@(System.IO.File.Exists(Server.MapPath("~/Images/Products/" + item.productName + ".jpg")) ? "Products/" + item.productName + ".jpg" : "placeholder.jpg")" class="card-img-top" alt="Card Image">
                     <div class="card-body d-grid">
                         <h5 class="card-title">@Html.ActionLink(item.productName, "Details", new { id = item.productID }, new { @class = "text-dark" })</h5>
                         <p class="card-text">@(item.productDescription.Length > maxLength ? item.productDescription.Substring(0, maxLength) + "..." : item.productDescription)</p>
