--- a/IClothingApplication/Views/Emails/Delete.cshtml
+++ b/IClothingApplication/Views/Emails/Delete.cshtml
@@ -1,64 +1,75 @@
 ﻿@model IClothingApplication.Models.Email
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Create";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Email</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.emailDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.emailDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.emailSubject)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.emailSubject)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.emailBody)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.emailBody)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Administrator.adminName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Administrator.adminName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Customer.customerName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Customer.customerName)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+<style>
+    .email-form {
+        max-width: 600px;
+        margin: auto;
     }
+
+        .email-form lable {
+            font-weight: bold;
+        }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+        .form-group label {
+            font-weight: bold;
+        }
+</style>
+
+<div class="email-form">
+    <h4>Delete Email</h4>
+    <hr />
+
+    <div class="form-group">
+        @Html.Label("From", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Administrator.adminName, new { @class = "form-control", @readonly = "readonly" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.Label("To", htmlAttributes: new { @class = "control-label" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Customer.customerName, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Subject", htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.DisplayFor(model => model.emailSubject, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Body", htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.DisplayFor(model => model.emailBody, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.Label("Date", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.emailDate, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div>
+            <input type="submit" value="Delete" class="btn btn-secondary me-1" />
+            @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-secondary me-1" })
+        </div>
+    </div>
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
