--- a/IClothingApplication/Views/Emails/Details.cshtml
+++ b/IClothingApplication/Views/Emails/Details.cshtml
@@ -1,58 +1,74 @@
 ﻿@model IClothingApplication.Models.Email
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Create";
 }
 
-<h2>Details</h2>
+<style>
+    .email-form {
+        max-width: 600px;
+        margin: auto;
+    }
 
-<div>
-    <h4>Email</h4>
+        .email-form lable {
+            font-weight: bold;
+        }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+        .form-group label {
+            font-weight: bold;
+        }
+</style>
+
+<div class="email-form">
+    <h4>Email Details</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.emailDate)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.emailDate)
-        </dd>
+    <div class="form-group">
+        @Html.Label("From", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Administrator.adminName, new { @class = "form-control", @readonly = "readonly" })
+        </div>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.emailSubject)
-        </dt>
+    <div class="form-group">
+        @Html.Label("To", htmlAttributes: new { @class = "control-label" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.Customer.customerName, new { @class = "form-control" })
+        </div>
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.emailSubject)
-        </dd>
+    <div class="form-group">
+        @Html.Label("Subject", htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.DisplayFor(model => model.emailSubject, new { @class = "form-control" })
+        </div>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.emailBody)
-        </dt>
+    <div class="form-group">
+        @Html.Label("Body", htmlAttributes: new { @class = "control-label" })
+        <div>
+            @Html.DisplayFor(model => model.emailBody, new { @class = "form-control" })
+        </div>
+    </div>
 
-        <dd>
-            @Html.DisplayFor(model => model.emailBody)
-        </dd>
+    <div class="form-group">
+        @Html.Label("Date", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.emailDate, new { @class = "form-control" })
+        </div>
+    </div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Administrator.adminName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Administrator.adminName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Customer.customerName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Customer.customerName)
-        </dd>
-
-    </dl>
+    <div class="form-group">
+        <div>
+            @Html.ActionLink("Back to Mail", "Index", null, new { @class = "btn btn-secondary me-1" })
+        </div>
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.emailNo }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
